--- a/index.html
+++ b/index.html
@@ -1,17 +1,1 @@
-<html>
-<head>
-<style>
-img {
-  width: 100%;
-}
-</style>
-</head>
-<body>
-
-<img = src="sample_f182262ac256de1ff6afd75ac7620acf.jpg" style=width:850px;height:1700px">
-
-</body>
-</html>
-<h1><BODY BGCOLOR = "PINK"></BODY><BODY TEXT = "WHITE"></BODY>hello, my name is <FONT COLOR="RED">j</FONT><FONT COLOR="ORANGE">a</FONT><FONT COLOR="YELLOW">c</FONT><FONT COLOR="GREEN">k</FONT><FONT COLOR="BLUE">s</FONT><FONT COLOR="INDIGO">o</FONT><FONT COLOR="VIOLET">n</FONT></h1>
-<img = src="sample_f182262ac256de1ff6afd75ac7620acf.jpg" style=width:850px;height:1700px>
-<!DOCTYPE html>
+<img src="sample_f182262ac256de1ff6afd75ac7620acf.jpg">
