--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<img src="sample_f182262ac256de1ff6afd75ac7620acf.jpg">
+<img src="spacestone29.github.io/sample_f182262ac256de1ff6afd75ac7620acf.jpg">
