--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<img src="spacestone29.github.io/sample_f182262ac256de1ff6afd75ac7620acf.jpg">
+<h1><BODY BGCOLOR = "PINK"></BODY><BODY TEXT = "WHITE"></BODY>hello, my name is <FONT COLOR="RED">j</FONT><FONT COLOR="ORANGE">a</FONT><FONT COLOR="YELLOW">c</FONT><FONT COLOR="GREEN">k</FONT><FONT COLOR="BLUE">s</FONT><FONT COLOR="INDIGO">o</FONT><FONT COLOR="VIOLET">n</FONT></h1>
