--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<img src="spacestone29.github.io/sample_f182262ac256de1ff6afd75ac7620acf.jpg">
+<!DOCTYPE html>
+<html>
+   <head>
+     <title>jackson's gooncave</title>
+   </head>
+  
+   <body>
+     <h1>google it</h1>
+     <img src=spacestone29.github.io/sample_f182262ac256de1ff6afd75ac7620acf.jpg>
+   </body>
+  
+</html
