--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
    <body>
      <h1>google it</h1>
-     <img src=spacestone29.github.io/sample_f182262ac256de1ff6afd75ac7620acf.jpg>
+     <img src=spacestone29.github.io/courtney1.jpg>
    </body>
   
 </html
