--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
    </head>
   
    <body>
-     <h1>google it</h1>
-     <img src=spacestone29.github.io/courntey1.jpg>
+      <h1><BODY BGCOLOR="BLACK"><BODY TEXT="RED">kill john lennon</h1>
    </body>
   
 </html
