--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
    </head>
   
    <body>
-      <h1><BODY BGCOLOR="BLACK"><BODY TEXT="RED">kill john lennon</h1>
+      <h1><BODY BGCOLOR="BLACK"><BODY TEXT="RED">goon harder</h1>
+      <img src="https://github.com/Spacestone29/spacestone29.github.io/blob/main/courntey1.jpg?raw=true" width=850>
    </body>
   
 </html
