--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html>
    <head>
-     <title>jackson's gooncave</title>
+     <title>Shadow Wizard Money Gang</title>
    </head>
   
    <body>
-      <h1><BODY BGCOLOR="BLACK"><BODY TEXT="RED">goon harder</h1>
-      <img src="https://github.com/Spacestone29/spacestone29.github.io/blob/main/sample_c201346898db438d5c2ed8efcaae368f.jpeg?raw=true" width=425>
-      <img src="https://github.com/Spacestone29/spacestone29.github.io/blob/main/33fd42489d3cbe18d21c4d0e8b47b6d221e6c5b4.jpeg?raw=true" width=375>
-      <img src="https://github.com/Spacestone29/spacestone29.github.io/blob/main/dd43b01725203108182f3c6df8658e3f.png?raw=true" width=348.5>
-      <img src="https://github.com/Spacestone29/spacestone29.github.io/blob/main/97f15debc6dbadfd770c7fb74256867a.png?raw=true" width=250>
-      <img src="https://github.com/Spacestone29/spacestone29.github.io/blob/main/6515efacb148a971e684e2d98a8b6d43.jpeg?raw=true" width=425>
-   </body>
-  
+      <h1><BODY BGCOLOR="BLACK"><BODY TEXT="PURPLE">Shadow Wizard Money Gang | We love casting spells🔮😈</h1>
+      <iframe width="420" height="315"
+         src="https://www.youtube.com/watch?v=xYiDQkYxZ4o"
+              </iframe>
 </html
