--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   
    <body>
       <h1><BODY BGCOLOR="BLACK"><BODY TEXT="PURPLE">Shadow Wizard Money Gang | We love casting spells🔮😈</h1>
-      <iframe width="420" height="315"
-         src="https://github.com/Spacestone29/spacestone29.github.io/blob/main/dj%20smokey%20-%20traphouse%20full%20of%20nukes%20%20HOSTED%20BY%20SHADOW%20WIZARD%20MONEY%20GANG.mp4"
-              </iframe>
+      <video width="480" height="360"
+         <source src="https://github.com/Spacestone29/spacestone29.github.io/blob/main/dj%20smokey%20-%20traphouse%20full%20of%20nukes%20%20HOSTED%20BY%20SHADOW%20WIZARD%20MONEY%20GANG.mp4" type="video/mp4">
+         <source src="https://github.com/Spacestone29/spacestone29.github.io/blob/main/dj%20smokey%20-%20traphouse%20full%20of%20nukes%20%20HOSTED%20BY%20SHADOW%20WIZARD%20MONEY%20GANG.ogg" type="movie/ogg">
+      </video>
 </html
