--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
    <body>
       <h1><BODY BGCOLOR="BLACK"><BODY TEXT="PURPLE">Shadow Wizard Money Gang | We love casting spells🔮😈</h1>
       <video width="320" height="240" controls>
-         <source src="dj smokey - traphouse full of nukes HOSTED BY SHADOW WIZARD MONEY GANG.mp4" type="video/mp4">
+         <source src="dj_smokey_traphouse_full_of_nukes_HOSTED_BY_SHADOW_WIZARD_MONEY_GANG.mp4" type="video/mp4">
       </video>
 </html
