--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
    <head>
-     <title>Shadow Wizard Money Gang</title>
+     <title>Jackson Roper's website</title>
+      .alert{
+      font-family:Times New Roman;
+      }
+      
+      
    </head>
   
    <body>
-      <h1><BODY BGCOLOR="BLACK"><BODY TEXT="PURPLE">Shadow Wizard Money Gang | We love casting spells🔮😈</h1>
-      <video width="1280" height="720" controls>
-         <source src="dj_smokey_traphouse_full_of_nukes_HOSTED_BY_SHADOW_WIZARD_MONEY_GANG.mp4" type="video/mp4">
-      </video>
+      <h5><BODY BGCOLOR="WHITE">SWMG<BODY TEXT="BLACK"></h5>
 </html
